fix(app.tsx): remove canvas container div to fix canvas not filling screen (box not centered)

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body {
+html, body, #root {
   width: 100%;
   height: 100%;
   margin: 0;
